# InsightFlow-Event-Triggered-ML

./: README.md  app.yaml  cloud_function.py  cloud_task.py  main.py  pyproject.toml  requirements.txt  test_data.csv  test_file.csv.py
model/: churn_model.pkl  model_creation.py
